# snake_ai

./: README.md  pyproject.toml
snakeai/: SnakeGame.py  SnakeGrid.py
