[tool.poetry]
name = "snakeai"
version = "0.1.0"
description = ""
authors = ["Espinoza, William"]
readme = "README.md"
packages = [{include = "snakeai"}]

[tool.poetry.dependencies]
python = "^3.10"
gym = "0.17.3"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
opencv-python = "^4.7.0.72"
stable-baselines3 = "1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
